# urdf_viewer

./: README.md  package.xml  setup.py
launch/: demo_teleop.launch.py  display.launch.py  display_ignition.launch.py
models/Sirius3/: Sirius3.urdf  model.config
models/Sirius3/meshes/: Left-Wheel-v1.stl  Right-Wheel-v1.stl
resource/rviz/: urdf_config.rviz
urdf_viewer/: teleop_keyboard.py
urdf_viewer/urdf/: sample_robot.urdf
